--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "koa-jwt": "^3.5.1",
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
+    "lru-cache": "^6.0.0",
     "moment": "^2.27.0"
   },
   "devDependencies": {},
