--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
     "lru-cache": "^6.0.0",
-    "moment": "^2.27.0"
+    "moment": "^2.27.0",
+    "node-schedule": "^1.3.2"
   },
   "devDependencies": {},
   "repository": {
