--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "node server",
+    "prestart": "yarn",
+    "start": "cross-env NODE_ENV=production start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
@@ -12,6 +14,7 @@
     "@luzhongk/node-logger": "^1.1.0",
     "@luzhongk/node-mysql": "^1.1.3",
     "chalk": "^4.1.0",
+    "cross-env": "^7.0.2",
     "koa": "^2.13.0",
     "koa-bodyparser": "^4.2.1",
     "koa-jwt": "^3.5.1",
