--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "node server",
     "prestart": "yarn",
-    "start": "cross-env NODE_ENV=production start",
+    "start": "cross-env NODE_ENV=production node server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
